# pigweed

./: .clang-tidy  .gitignore  BUILD.bazel  BUILD.gn  CMakeLists.txt  GEMINI.md  Kconfig.zephyr  MODULE.bazel  PIGWEED_MODULES  WORKSPACE  go.mod  go.sum  pw  workflows.json
pw_allocator/: Android.bp  BUILD.bazel  BUILD.gn  CMakeLists.txt  allocator.cc  allocator_as_pool.cc  allocator_test.cc  best_fit_test.cc  bucket_allocator_test.cc  buddy_allocator.cc  bump_allocator.cc  chunk_pool.cc  control_block.cc  docs.rst  fallback_allocator.cc  fallback_allocator_test.cc  first_fit_test.cc  freertos_allocator_test.cc  freertos_testing.cc  guarded_allocator_test.cc  guide.rst  libc_allocator.cc  managed_ptr.cc  sync_allocator_testing.cc  tracking_allocator_test.cc  unique_ptr_test.cc  worst_fit_test.cc
pw_assert/: CMakeLists.txt
pw_assert_log/: docs.rst
pw_async/: Android.bp
pw_async2/: Android.bp  BUILD.bazel  BUILD.gn  CMakeLists.txt  box_test.cc  code_size.rst  coro_test.cc  dispatcher.cc  dispatcher_for_test.cc  dispatcher_stress_test.cc  dispatcher_test.cc  future_timeout_test.cc  futures.rst  select_test.cc  task.cc  waker.cc
pw_async_basic/: Android.bp
pw_bluetooth/: CMakeLists.txt  emboss_test.cc
pw_bluetooth_proxy/: Android.bp  BUILD.bazel  BUILD.gn  CMakeLists.txt  acl_data_channel.cc  basic_l2cap_channel.cc  basic_mode_channel_proxy_test.cc  basic_mode_tx_engine.cc  basic_mode_tx_engine_test.cc  bt-proxy.bzl  channel_proxy_impl.cc  channel_proxy_test.cc  credit_based_flow_control_channel_proxy_test.cc  credit_based_flow_control_rx_engine.cc  credit_based_flow_control_rx_engine_test.cc  credit_based_flow_control_tx_engine.cc  credit_based_flow_control_tx_engine_test.cc  docs.rst  gatt_notify_channel.cc  gatt_notify_test.cc  gatt_notify_tx_engine.cc  gatt_notify_tx_engine_test.cc  generic_l2cap_channel.cc  generic_l2cap_channel_async.cc  generic_l2cap_channel_sync.cc  l2cap_channel.cc  l2cap_channel_async.cc  l2cap_channel_manager.cc  l2cap_channel_sync.cc  l2cap_coc.cc  l2cap_coc_test.cc  l2cap_logical_link.cc  l2cap_signaling_channel.cc  proxy_host.cc  proxy_host_async.cc  proxy_host_sync.cc  proxy_host_test.cc  recombiner_test.cc  test_utils.cc  test_utils_sync.cc
pw_bluetooth_proxy/gatt/: Android.bp  BUILD.bazel  BUILD.gn  CMakeLists.txt  gatt.bzl  gatt.cc  gatt_integration_test.cc  gatt_test.cc
pw_bluetooth_proxy/gatt/public/pw_bluetooth_proxy/gatt/: gatt.h
pw_bluetooth_sapphire/: BUILD.bazel  size_report.rst
pw_bluetooth_sapphire/size_report/: BUILD.bazel
pw_boot_cortex_m/: BUILD.bazel
pw_build/: BUILD.bazel  generated_pigweed_modules_lists.gni  ignore_group.gni  linker_script.gni  pigweed.bazelrc  pigweed.cmake  pw_pylint.bzl  pw_pylint_test.bzl
pw_bytes/: BUILD.bazel  BUILD.gn  CMakeLists.txt  bit_test.cc  byte_builder_test.cc
pw_channel/: BUILD.bazel  BUILD.gn  CMakeLists.txt  epoll_channel.cc  forwarding_channel_test.cc
pw_chre/: BUILD.bazel  BUILD.gn  OWNERS  chre.cc  platform_nanoapp.cc
pw_chrono/: Android.bp  BUILD.bazel  BUILD.gn  CMakeLists.txt  system_clock.cc  system_clock_facade_test.cc
pw_chrono_embos/: BUILD.bazel  BUILD.gn  system_clock.cc
pw_chrono_freertos/: BUILD.bazel  BUILD.gn  CMakeLists.txt  system_clock.cc
pw_chrono_threadx/: BUILD.bazel  BUILD.gn  system_clock.cc
pw_chrono_zephyr/: BUILD.bazel  system_timer.cc
pw_clock_tree/: BUILD.bazel  BUILD.gn  clock_tree_test.cc  dependency_nc_test.cc  dependency_test.cc  docs.rst
pw_clock_tree_mcuxpresso/: BUILD.bazel  BUILD.gn  clock_tree_test.cc  docs.rst  examples.cc  sync_selector_nc_test.cc  sync_selector_test.cc
pw_clock_tree_mcuxpresso/public/pw_clock_tree_mcuxpresso/: clock_tree.h  sync_selector.h
pw_clock_tree_mcuxpresso/test_mocks/: fsl_clock.h  fsl_power.h  mocks.cc  mocks.h
pw_containers/: Android.bp  BUILD.bazel  BUILD.gn  CMakeLists.txt  aa_tree_item.cc  deque_test.cc  docs.rst  dynamic_deque_test.cc  dynamic_hash_map_test.cc  dynamic_ptr_vector_test.cc  dynamic_queue_test.cc  dynamic_vector_test.cc  functional_test.cc  inline_deque_test.cc  inline_queue_test.cc  intrusive_queue.cc  intrusive_queue_test.cc  lists.rst  maps.rst  optional_test.cc  queue_test.cc
pw_cpu_exception_cortex_m/: Android.bp  BUILD.bazel
pw_crypto/: BUILD.bazel  BUILD.gn
pw_env_setup/: docs.rst
pw_function/: BUILD.bazel
pw_fuzzer/: CMakeLists.txt
pw_grpc/: BUILD.bazel  connection.cc
pw_hdlc/: router_test.cc
pw_i2c/: CMakeLists.txt
pw_i2c_mcuxpresso/: initiator.cc
pw_ide/bazel/compile_commands/test/: BUILD.bazel  asm_no_deps.S  asm_no_deps.h  c_no_deps.c  c_no_deps.h  c_to_asm.c  c_to_asm.h  c_to_c.c  c_to_c.h  c_to_c_to_c.c  c_to_c_to_c.h  combined_c_no_deps.c  combined_cpp_no_deps.cc  combined_no_deps.h  cpp_dep_import.cc  cpp_dep_import.h  cpp_gen.bzl  cpp_no_deps.cc  cpp_no_deps.h  cpp_no_deps_virtual_include.cc  cpp_to_c.cc  cpp_to_c.h  cpp_to_c_to_asm.cc  cpp_to_c_to_asm.h  cpp_to_combined.cc  cpp_to_combined.h  cpp_to_cpp.cc  cpp_to_cpp.h  cpp_to_cpp_to_c.cc  cpp_to_cpp_to_c.h  cpp_to_cpp_to_combined.cc  cpp_to_cpp_to_combined.h  cpp_to_cpp_to_cpp.cc  cpp_to_cpp_to_cpp.h  cpp_to_cpp_to_header.cc  cpp_to_cpp_to_header.h  cpp_to_cpp_to_import.cc  cpp_to_cpp_to_import.h  cpp_to_cpp_to_multi.cc  cpp_to_cpp_to_multi.h  (+28 more)
pw_ide/bazel/compile_commands/test/public/: deep_leaf.h
pw_interrupt_cortex_m/: BUILD.bazel
pw_kernel/: kernel.bazelrc
pw_kernel/macros/: BUILD.bazel  arch_macro_helpers.rs  arm_cortex_m_macro.rs  riscv_macro.rs
pw_kernel/tests/async_ipc/user/: BUILD.bazel  handler1.rs  handler2.rs  handler3.rs  initiator.rs
pw_kvs/: disk_format.rst  guides.rst
pw_log/: Android.bp  BUILD.bazel  docs.rst  proto_utils.cc  rate_limited.cc
pw_log_basic/: CMakeLists.txt
pw_log_null/: docs.rst
pw_log_rpc/: CMakeLists.txt
pw_log_tokenized/: BUILD.bazel  BUILD.gn  CMakeLists.txt  backend.cmake  backend.gni  base64_over_hdlc.cc  docs.rst  log_tokenized_light.cc  log_tokenized_test.cc  log_tokenized_test_c.c
pw_malloc/: BUILD.bazel  BUILD.gn  CMakeLists.txt
pw_malloc_freelist/: BUILD.gn  docs.rst
pw_malloc_freertos/: BUILD.bazel  BUILD.gn
(+844 files in other folders)
