# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("//pw_bloat:pw_cc_size_binary.bzl", "pw_cc_size_binary")
load("//pw_bloat:pw_size_diff.bzl", "pw_size_diff")
load("//pw_bloat:pw_size_table.bzl", "pw_size_table")

package(default_visibility = ["//visibility:public"])

pw_cc_size_binary(
    name = "host",
    srcs = ["host.cc"],
    platform = "//targets/rp2040:rp2040_size_report",
    deps = [
        "//pw_bloat:bloat_this_binary",
        "//pw_bluetooth_sapphire:null_lease_provider",
        "//pw_bluetooth_sapphire/host:stack",
        "//pw_bluetooth_sapphire/host/common",
        "//pw_bluetooth_sapphire/host/gap",
        "@pigweed//pw_random",
    ],
)

pw_size_diff(
    name = "host_size_diff",
    base = "//pw_bloat:bloat_base",
    label = "Create and initialize host",
    target = ":host",
)

pw_size_table(
    name = "host_size_report",
    reports = [
        ":host_size_diff",
    ],
)
