# Copyright 2025 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_proc_macro")

rust_library(
    name = "arch_macro_helpers",
    srcs = [
        "arch_macro_helpers.rs",
    ],
    edition = "2024",
    tags = ["kernel"],
    deps = [
        "@rust_crates//:quote",
        "@rust_crates//:syn",
    ],
)

rust_proc_macro(
    name = "arm_cortex_m_macro",
    srcs = [
        "arm_cortex_m_macro.rs",
    ],
    edition = "2024",
    tags = ["kernel"],
    visibility = ["//visibility:public"],
    deps = [
        ":arch_macro_helpers",
        "@rust_crates//:proc-macro2",
        "@rust_crates//:quote",
        "@rust_crates//:syn",
    ],
)

rust_proc_macro(
    name = "riscv_macro",
    srcs = [
        "riscv_macro.rs",
    ],
    edition = "2024",
    tags = ["kernel"],
    visibility = ["//visibility:public"],
    deps = [
        ":arch_macro_helpers",
        "@rust_crates//:proc-macro2",
        "@rust_crates//:quote",
        "@rust_crates//:syn",
    ],
)
