# Copyright 2026 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("//pw_kernel/tooling:rust_app.bzl", "rust_app")

rust_app(
    name = "initiator",
    srcs = ["initiator.rs"],
    codegen_crate_name = "initiator_codegen",
    edition = "2024",
    system_config = "//pw_kernel/target:system_config_file",
    tags = ["kernel"],
    visibility = ["//visibility:public"],
    deps = [
        "//pw_kernel/userspace",
        "//pw_log/rust:pw_log",
        "//pw_status/rust:pw_status",
    ],
)

rust_app(
    name = "handler1",
    srcs = [
        "common_handler.rs",
        "handler1.rs",
    ],
    codegen_crate_name = "handler1_codegen",
    edition = "2024",
    system_config = "//pw_kernel/target:system_config_file",
    tags = ["kernel"],
    visibility = ["//visibility:public"],
    deps = [
        "//pw_kernel/userspace",
        "//pw_log/rust:pw_log",
        "//pw_status/rust:pw_status",
    ],
)

rust_app(
    name = "handler2",
    srcs = [
        "common_handler.rs",
        "handler2.rs",
    ],
    codegen_crate_name = "handler2_codegen",
    edition = "2024",
    system_config = "//pw_kernel/target:system_config_file",
    tags = ["kernel"],
    visibility = ["//visibility:public"],
    deps = [
        "//pw_kernel/userspace",
        "//pw_log/rust:pw_log",
        "//pw_status/rust:pw_status",
    ],
)

rust_app(
    name = "handler3",
    srcs = [
        "common_handler.rs",
        "handler3.rs",
    ],
    codegen_crate_name = "handler3_codegen",
    edition = "2024",
    system_config = "//pw_kernel/target:system_config_file",
    tags = ["kernel"],
    visibility = ["//visibility:public"],
    deps = [
        "//pw_kernel/userspace",
        "//pw_log/rust:pw_log",
        "//pw_status/rust:pw_status",
    ],
)
